--- a/App/Views/includes/cooperation.html
+++ b/App/Views/includes/cooperation.html
@@ -1,4 +1,7 @@
 <section class="cooperation">
+    <svg class="cooperation__svgLily" width="59" height="65" viewBox="0 0 59 65" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="#bloom"></use> 
+    </svg>
     <h3 class="heading-3">
         Způsob spolupráce
     </h3>
