--- a/App/Views/includes/organizations.html
+++ b/App/Views/includes/organizations.html
@@ -13,6 +13,9 @@
     >
         <use xlink:href="#elipse"></use>
     </svg>
+    <svg class="organizations__svgLeaf" width="71" height="73" viewBox="0 0 71 73" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="#leaf"></use>
+      </svg>
     <h3 class="heading-3">Spolupracuji s neziskovými organizacemi</h3>
     <container class="organizations__container">
         <div class="organizations__organization">
