--- a/App/Views/includes/profile.html
+++ b/App/Views/includes/profile.html
@@ -1,12 +1,10 @@
 <section class="profile">
-  <!-- <svg
-    class="profile__svg profile__svg--timber"
-    viewBox="0 0 1468 40"
-    fill="none"
-    xmlns="http://www.w3.org/2000/svg"
-  >
-    <use xlink:href="#timber"></use>
-  </svg> -->
+  <svg class="profile__svgTop" width="71" height="73" viewBox="0 0 71 73" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <use xlink:href="#leaf"></use>
+  </svg>
+  <svg class="profile__svgLily" width="59" height="65" viewBox="0 0 59 65" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <use xlink:href="#bloom"></use> 
+  </svg>  
   <img src="img/profile.jpg" alt="" class="profile__photo" />
   <div class="profile__text">
     <p class="paragraph-1">
