--- a/App/Views/includes/way.html
+++ b/App/Views/includes/way.html
@@ -6,4 +6,7 @@
         <h3 class="heading-3">Moje cesta k medecíně</h3>
     </div>
     <p class="paragraph-1 way__text">Moje cesta k medicíně a později k psychoterapii vedla přes úrodné pole mé skvělé rodiny, která byla tím nejlepším kompostem pro můj růst. O konflikty, hádky a někdy dramatické události nebyla nouze. Jako malinká holčička jsem chtěla zachraňovat mé blízké tam venku, aby se měli rádi a usmířili se...toužila jsem po lásce jako z pohádky. Později, již dospělá žena, jsem usmířila svoje blízké uvnitř sebe sama. Nejprve jsem chtěla léčit všechny venku, pak jsem uzdravovala celý svět v sobě. Dnes mám radost z obyčejných věcí, že vstanu z postele, vidím, můžu chodit. Potkávat se s lidmi a poznávat vzájemně pestrobarevnost života. Ta největší láska je k životu samému.</p>
+    <svg class="way__svgBottom" width="59" height="65" viewBox="0 0 59 65" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="#bloom"></use> 
+    </svg>
 </section>
