--- a/App/Views/includes/topics.html
+++ b/App/Views/includes/topics.html
@@ -1,6 +1,6 @@
 <section class="topics">
-    <svg class="topics__svgTop" width="591" height="592" viewBox="0 0 591 592" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <use xlink:href="#decorationShape"></use> 
+    <svg class="topics__svgTop" width="59" height="65" viewBox="0 0 59 65" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="#bloom"></use> 
     </svg>
     <div class="topics__img__container">
         <img src="img/leafs.jpg" alt="rose" class="topics__img__regular">
@@ -18,8 +18,8 @@
         <div class="topics__text__reflect paragraph-1">- Komunikace</div>
         <div class="topics__text__reflect paragraph-1">- Mezilidské vztahy</div>        
     </div>
-    <svg class="topics__svgBottom" width="591" height="592" viewBox="0 0 591 592" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <use xlink:href="#decorationShape"></use> 
+    <svg class="topics__svgBottom" width="59" height="65" viewBox="0 0 59 65" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="#bloom"></use> 
     </svg>
     <img src="img/leafs.jpg" alt="rose" class="topics__img__mobile">
 </section>
