--- a/src/client/scss/sections/_cooperation.scss
+++ b/src/client/scss/sections/_cooperation.scss
@@ -14,6 +14,31 @@
         padding-right: 2rem;
     }
 
+    &__svgLily {
+        width: 40rem;
+        height: 40rem;
+
+        opacity: 0.15;
+
+        position: absolute;
+
+        top: 5%;
+        right: 0;
+        z-index: -1;
+
+        @media only screen and (max-width: 1400px) {
+            width: 35rem;
+            height: 35rem;
+        }
+        @media only screen and (max-width: 1100px) {
+            width: 25rem;
+            height: 25rem;
+        }
+        @media only screen and (max-width: 800px) {
+            display: none;
+        }
+    }
+
     & .heading-3 {
         margin-left: 8rem;
         margin-bottom: 10rem;
