--- a/src/client/scss/sections/_way.scss
+++ b/src/client/scss/sections/_way.scss
@@ -51,4 +51,31 @@
             font-size: $font-smallest;
         }
     }
+    &__svgBottom {
+        width: 35rem;
+        height: 35rem;
+
+        opacity: 0.15;
+
+        position: absolute;
+
+        top: 50%;
+        left: -10%;
+        z-index: -1;
+
+        @media only screen and (max-width: 1400px) {
+            width: 30rem;
+            height: 30rem;
+        }
+        @media only screen and (max-width: 1100px) {
+            width: 15rem;
+            height: 15rem;
+
+            top: 60%;
+            left: -5%;
+        }
+        @media only screen and (max-width: 800px) {
+            display: none;
+        }
+    }
 }
