--- a/App/Views/includes/cooperation.html
+++ b/App/Views/includes/cooperation.html
@@ -3,18 +3,18 @@
         Způsob spolupráce
     </h3>
     <container class="cooperation__container">
-        <div class="cooperation-way">
+        <div class="cooperation-way toBeAnimated animation-bounceUp">
             <div class="cooperation-way__content">
                 <h4 class="heading-4 heading-4--bold">Rezonance</h4>
                 <p class="paragraph-1">
-                    Když to se nou rezonuje, když to s tebou rezonuje, přišel okamžik, kdy se můžeme setkat.
+                    Když to se mnou rezonuje, když to s tebou rezonuje, přišel okamžik, kdy se můžeme setkat.
                 </p>
             </div>
             <svg viewBox="0 0 293 221" preserveAspectRatio="none" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing cooperation-way__drawing--resonance">
                 <use xlink:href="#resonance"></use>
             </svg>
         </div>
-        <div class="cooperation-way">
+        <div class="cooperation-way toBeAnimated animation-bounceUp delay--05">
             <div class="cooperation-way__content">
                 <h4 class="heading-4 heading-4--bold">Dynamika skupiny</h4>
                 <p class="paragraph-1">
@@ -26,7 +26,7 @@
                 <use xlink:href="#dynamics"></use>
             </svg>
         </div>
-        <div class="cooperation-way">
+        <div class="cooperation-way toBeAnimated animation-bounceUp delay--10">
             <div class="cooperation-way__content">
                 <h4 class="heading-4 heading-4--bold">Instituce a organizace</h4>
                 <p class="paragraph-1">
@@ -39,7 +39,7 @@
                 <use xlink:href="#institutions"></use>
             </svg>
         </div>
-        <div class="cooperation-way">
+        <div class="cooperation-way toBeAnimated animation-bounceUp delay--15">
             <div class="cooperation-way__content">
                 <h4 class="heading-4 heading-4--bold">Individuální konzultace</h4>
                 <p class="paragraph-1">
