--- a/App/Views/includes/profile.html
+++ b/App/Views/includes/profile.html
@@ -7,7 +7,9 @@
   >
     <use xlink:href="#timber"></use>
   </svg> -->
-  <img src="img/profile.jpg" alt="" class="profile__photo" />
+  <container class="profile__photo-container toBeAnimated animation-rollInFromLeft">
+    <img src="img/profile.jpg" alt="" class="profile__photo toBeAnimated"></img>
+  </container>
   <div class="profile__text">
     <p class="paragraph-1">
       Jmenuji se MUDr. Taťjana Horká, desítky let se zabývám konzultační
