--- a/App/Views/includes/topics.html
+++ b/App/Views/includes/topics.html
@@ -2,7 +2,7 @@
     <svg class="topics__svgTop" width="591" height="592" viewBox="0 0 591 592" fill="none" xmlns="http://www.w3.org/2000/svg">
         <use xlink:href="#decorationShape"></use> 
     </svg>
-    <div class="topics__img__container">
+    <div class="topics__img__container toBeAnimated animation-rollInFromRight">
         <img src="img/leafs.jpg" alt="rose" class="topics__img__regular">
     </div>
     <div class="topics__text">
