--- a/App/Views/includes/organizations.html
+++ b/App/Views/includes/organizations.html
@@ -1,7 +1,7 @@
 <section class="organizations">
     <div class="organizations__bg">
         <svg class="svg">
-            <clipPath id="organizations-clip-path" clipPathUnits="objectBoundingBox"><path d="M0,0.086 H0.238 C0.238,0.086,0.369,0.135,0.491,0.086 C0.613,0.037,0.629,0.026,0.748,0.003 C0.866,-0.019,1,0.086,1,0.086 V1 H0 V0.086"></path></clipPath>
+            <clipPath id="organizations-clip-path" clipPathUnits="objectBoundingBox"><path d="M0,0.08 L0.226,0.012 C0.226,0.012,0.356,0.045,0.478,0.012 C0.601,-0.021,0.618,0.027,0.737,0.012 C0.856,-0.003,1,0.012,1,0.012 V1 H0.457 H0 V0.669 V0.08"></path></clipPath>
         </svg>
     </div>
     <svg
@@ -15,7 +15,7 @@
     </svg>
     <h3 class="heading-3">Spolupracuji s neziskovými organizacemi</h3>
     <container class="organizations__container">
-        <div class="organizations__organization">
+        <div class="organizations__organization toBeAnimated animation-bounceUp">
             <a class="organizations__waterlily" href="https://www.branabrnenska.cz/">
                 <svg preserveAspectRatio="none" viewBox="0 0 71 73" class="organizations__svg organizations__svg--leaf">
                     <use xlink:href="#leaf"></use>
@@ -29,7 +29,7 @@
             </a>
             <h4 class="heading-4"><a href="https://www.branabrnenska.cz/">MAS BRÁNA BRNĚNSKA</a></h4>
         </div>
-        <div class="organizations__organization">
+        <div class="organizations__organization toBeAnimated animation-bounceUp delay--05">
             <a class="organizations__waterlily" href="http://duhovasklenenka.cz/">
                 <svg preserveAspectRatio="none" viewBox="0 0 71 73" class="organizations__svg organizations__svg--leaf">
                     <use xlink:href="#leaf"></use>
@@ -43,7 +43,7 @@
             </a>
             <h4 class="heading-4"><a href="http://duhovasklenenka.cz/">Skleněnka z.s.</a></h4>
         </div>
-        <div class="organizations__organization">
+        <div class="organizations__organization toBeAnimated animation-bounceUp delay--10">
             <a class="organizations__waterlily" href="http://svobodnaskola.cz/">
                 <svg preserveAspectRatio="none" viewBox="0 0 71 73" class="organizations__svg organizations__svg--leaf">
                     <use xlink:href="#leaf"></use>
