--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,136 @@
     opacity: 1;
     filter: none; } }
 
+@keyframes flowerZoom {
+  0% {
+    transform: scale(1.2) translateX(-5rem);
+    filter: grayscale(0.75) blur(5px);
+    opacity: 0; }
+  5% {
+    filter: grayscale(0);
+    opacity: 1; }
+  95% {
+    filter: grayscale(0);
+    opacity: 1; }
+  100% {
+    transform: scale(1.4) rotate(5deg) translateX(-15rem);
+    filter: grayscale(0.75) blur(5px);
+    opacity: 0; } }
+
+.animation-rollInVertically {
+  position: relative;
+  overflow: hidden; }
+  .animation-rollInVertically::before, .animation-rollInVertically::after {
+    height: 50%;
+    width: 100%;
+    content: "";
+    background-color: #ffffff;
+    display: block;
+    position: absolute;
+    z-index: 1;
+    transition: transform cubic-bezier(0.74, 0.01, 0.35, 0.95) 1s; }
+  .animation-rollInVertically::after {
+    top: 0;
+    left: 0; }
+  .animation-rollInVertically::before {
+    bottom: 0;
+    left: 0; }
+  .animation-rollInVertically:not(.toBeAnimated)::after {
+    transform: translateY(-100%); }
+  .animation-rollInVertically:not(.toBeAnimated)::before {
+    transform: translateY(100%); }
+
+/*
+.animation-rollInHorizontally {
+  position: relative;
+  overflow: hidden;
+
+  &::before,
+  &::after {
+    height: 100%;
+    width: 50%;
+    content: "";
+    background-color: $color-white;
+
+    display: block;
+
+    position: absolute;
+    z-index: 1;
+
+    transition: transform cubic-bezier(0.74, 0.01, 0.35, 0.95) 1s;
+  }
+  &::after {
+    top: 0;
+    left: 0;
+  }
+  &::before {
+    top: 0;
+    right: 0;
+  }
+  &:not(.toBeAnimated) {
+    &::after {
+      transform: translateX(-100%);
+    }
+    &::before {
+      transform: translateX(100%);
+    }
+  }
+}
+*/
+.animation-rollInFromLeft {
+  position: relative;
+  overflow: hidden; }
+  .animation-rollInFromLeft::before {
+    height: 100%;
+    width: 100%;
+    content: "";
+    background-color: #ffffff;
+    display: block;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    transition: transform cubic-bezier(0.74, 0.01, 0.35, 0.95) 1s; }
+  .animation-rollInFromLeft:not(.toBeAnimated)::before {
+    transform: translateX(100%); }
+
+.animation-rollInFromRight {
+  position: relative;
+  overflow: hidden; }
+  .animation-rollInFromRight::before {
+    height: 100%;
+    width: 100%;
+    content: "";
+    background-color: #ffffff;
+    display: block;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    transition: transform cubic-bezier(0.74, 0.01, 0.35, 0.95) 1s; }
+  .animation-rollInFromRight:not(.toBeAnimated)::before {
+    transform: translateX(-100%); }
+
+.animation-bounceUp {
+  transform: translateY(5%);
+  opacity: 0;
+  transition: transform 0.5s ease-out, opacity 0.5s ease-out; }
+  .animation-bounceUp:not(.toBeAnimated) {
+    transform: translateY(0);
+    opacity: 1; }
+
+.delay--05:not(.toBeAnimated) {
+  animation-delay: 0.5s;
+  transition-delay: 0.5s; }
+
+.delay--10:not(.toBeAnimated) {
+  animation-delay: 1s;
+  transition-delay: 1s; }
+
+.delay--15:not(.toBeAnimated) {
+  animation-delay: 1.5s;
+  transition-delay: 1.5s; }
+
 *,
 *::before,
 *::after {
@@ -207,7 +337,8 @@ a:link {
   margin-right: auto;
   display: none;
   align-items: center;
-  justify-content: space-between; }
+  justify-content: space-between;
+  transform: none; }
   .review--active {
     display: flex; }
   @media screen and (max-width: 1400px) {
@@ -228,10 +359,10 @@ a:link {
       display: none; }
     .review__person--hiding {
       display: flex;
-      animation: reviewDisappear 2s forwards; }
+      animation: reviewDisappear 1s forwards; }
     .review__person--visible {
       display: flex;
-      animation: reviewAppear 2s forwards; }
+      animation: reviewAppear 1s forwards; }
     @media screen and (max-width: 1400px) {
       .review__person {
         margin-left: auto;
@@ -285,10 +416,10 @@ a:link {
       display: none; }
     .review__leaf--hiding {
       display: block;
-      animation: leafFall 4s linear forwards; }
+      animation: leafFall 3s linear forwards; }
     .review__leaf--visible {
       display: block;
-      animation: reviewAppear 2s forwards; }
+      animation: reviewAppear 1s forwards; }
     @media screen and (max-width: 800px) {
       .review__leaf {
         width: 5rem;
@@ -338,10 +469,10 @@ a:link {
     display: none; }
   .review__text--hiding {
     display: flex;
-    animation: reviewDisappear 2s forwards; }
+    animation: reviewDisappear 1s forwards; }
   .review__text--visible {
     display: flex;
-    animation: reviewAppear 2s forwards; }
+    animation: reviewAppear 1s forwards; }
 
 .cooperation {
   width: 100%;
@@ -676,6 +807,8 @@ a:link {
 
 .organizations {
   padding-bottom: 20rem;
+  margin-top: -8rem;
+  clip-path: url(#organizations-clip-path);
   position: relative; }
   @media screen and (max-width: 800px) {
     .organizations {
@@ -686,7 +819,7 @@ a:link {
     .organizations__svg--elipse {
       width: 45rem;
       height: 45rem;
-      top: 30rem;
+      top: 25rem;
       left: 50%;
       transform: translateY(-50%) translateX(-50%); }
       @media screen and (max-width: 800px) {
@@ -721,10 +854,11 @@ a:link {
       transform: scaleX(-1) rotate(-10deg); }
   .organizations .heading-3 {
     width: 30rem;
-    color: #000000;
+    color: #ffffff;
     text-align: center;
+    line-height: 1.2;
     position: absolute;
-    top: 30rem;
+    top: 25rem;
     left: 50%;
     transform: translateY(-50%) translateX(-50%); }
     .organizations .heading-3::after {
@@ -732,7 +866,6 @@ a:link {
       width: 40rem;
       height: 40rem;
       border-radius: 50%;
-      background-image: radial-gradient(#ffffff 57%, transparent 70%);
       display: block;
       position: absolute;
       top: 50%;
@@ -747,7 +880,7 @@ a:link {
     position: relative;
     z-index: 2; }
   .organizations__bg {
-    height: 40rem;
+    height: 48rem;
     background: #9CBD6F; }
     @media screen and (max-width: 500px) {
       .organizations__bg {
@@ -826,13 +959,23 @@ a:link {
   @media only screen and (max-width: 900px) {
     .passedEvents {
       height: auto; } }
-  .passedEvents__backgroundImage {
+  .passedEvents__image-container {
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    display: block;
+    overflow: hidden;
+    position: relative; }
+  .passedEvents__image {
     width: calc(100% - 70rem);
     height: 100%;
     transform: scaleX(-1);
-    object-fit: cover; }
+    object-fit: cover;
+    background-color: transparent;
+    position: absolute;
+    animation: linear flowerZoom 30s infinite; }
     @media only screen and (max-width: 900px) {
-      .passedEvents__backgroundImage {
+      .passedEvents__image {
         display: none; } }
   .passedEvents__content {
     height: 105%;
@@ -840,7 +983,8 @@ a:link {
     transform: translateY(-50%);
     position: absolute;
     top: 50%;
-    right: -2rem; }
+    right: -2rem;
+    z-index: 2; }
     @media only screen and (max-width: 1100px) {
       .passedEvents__content {
         height: 100%;
@@ -919,6 +1063,7 @@ a:link {
     position: absolute;
     top: -3rem;
     left: 50%;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center; }
@@ -957,12 +1102,14 @@ a:link {
       position: absolute;
       bottom: -6rem;
       left: 50%;
+      z-index: 2;
       transition: all .3s; }
       .passedEvents__form__submit.hidden {
         display: none; }
 
 .profile {
   background-image: linear-gradient(180deg, rgba(159, 191, 115, 0.1) 0%, rgba(129, 168, 76, 0.1) 100%);
+  padding-bottom: 5rem;
   display: flex;
   justify-content: flex-end;
   position: relative; }
@@ -1000,47 +1147,54 @@ a:link {
       @media screen and (max-width: 800px) {
         .profile__svg--root {
           display: none; } }
-  .profile__photo {
+  .profile__photo-container {
     width: 50rem;
     height: 110%;
-    object-fit: cover;
     position: absolute;
     left: 15rem;
     bottom: -5%;
     z-index: 3; }
     @media screen and (max-width: 1600px) {
-      .profile__photo {
+      .profile__photo-container {
         left: 10rem; } }
     @media screen and (max-width: 1200px) {
-      .profile__photo {
+      .profile__photo-container {
         width: 40rem;
         left: 0; } }
     @media screen and (max-width: 1000px) {
-      .profile__photo {
+      .profile__photo-container {
         width: 30rem;
         height: 100%;
         bottom: 0; } }
     @media screen and (max-width: 800px) {
-      .profile__photo {
-        width: 100%;
+      .profile__photo-container {
+        width: 50rem;
         height: auto;
         padding: 10rem 7.5rem;
         padding-bottom: 0;
+        margin-left: auto;
+        margin-right: auto;
         position: relative;
         right: unset;
         top: unset;
         transform: none;
         bottom: -4rem; } }
     @media only screen and (max-width: 500px) {
-      .profile__photo {
-        padding: 7.5rem 5rem;
+      .profile__photo-container {
+        width: 80%;
+        padding: 0;
         padding-bottom: 0; } }
     @media screen and (max-width: 450px) {
-      .profile__photo {
-        padding: 0; } }
+      .profile__photo-container {
+        width: 100%; } }
     @media only screen and (max-width: 400px) {
-      .profile__photo {
-        margin: 5rem 3rem; } }
+      .profile__photo-container {
+        margin-bottom: 5rem; } }
+  .profile__photo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block; }
   .profile__text {
     width: calc(100% - 65rem);
     min-height: 65rem;
@@ -1123,7 +1277,8 @@ a:link {
     position: absolute;
     right: 3%;
     bottom: -44%;
-    z-index: -1; }
+    z-index: -1;
+    animation: testAnimation 5s; }
     @media only screen and (max-width: 1400px) {
       .topics__svgBottom {
         width: 45rem;
