--- a/src/client/scss/sections/_organizations.scss
+++ b/src/client/scss/sections/_organizations.scss
@@ -1,5 +1,7 @@
 .organizations {
     padding-bottom: 20rem;
+    margin-top: -8rem;
+    clip-path: url(#organizations-clip-path);
 
     position: relative;
 
@@ -15,7 +17,7 @@
             width: 45rem;
             height: 45rem;
 
-            top: 30rem;
+            top: 25rem;
             left: 50%;
             transform: translateY(-50%) translateX(-50%);
 
@@ -64,11 +66,12 @@
     & .heading-3 {
         width: 30rem;
 
-        color: $color-black;
+        color: $color-white;
         text-align: center;
+        line-height: 1.2;
        
         position: absolute;
-        top: 30rem;
+        top: 25rem;
         left: 50%;
         transform: translateY(-50%) translateX(-50%);
 
@@ -77,7 +80,6 @@
             width: 40rem;
             height: 40rem;
             border-radius: 50%;
-            background-image: radial-gradient($color-white 57%, transparent 70%) ;
 
             display: block;
 
@@ -99,7 +101,7 @@
         z-index: 2;
     }
     &__bg {
-        height: 40rem;
+        height: 48rem;
         background: $color-green;
 
         @media screen and (max-width: 500px) {
