--- a/src/client/scss/sections/_passedEvents.scss
+++ b/src/client/scss/sections/_passedEvents.scss
@@ -4,16 +4,31 @@
 
     position: relative;
     z-index: 3;
-
+    
     @media only screen and (max-width: 900px) {
         height: auto;
     }
+    
+    &__image-container {
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
 
-    &__backgroundImage {
+        display: block;
+
+        overflow: hidden;
+        position: relative;
+    }
+    &__image {
         width: calc(100% - 70rem);
         height: 100%;
         transform: scaleX(-1);
         object-fit: cover;
+        background-color: transparent;
+
+        position: absolute; 
+
+        animation: linear flowerZoom 30s infinite;
 
         @media only screen and (max-width: 900px) {
             display: none;
@@ -27,6 +42,7 @@
         position: absolute;
         top: 50%;
         right: -2rem; // Who knows why there is white space
+        z-index: 2;
 
         @media only screen and (max-width: 1100px) {
             height: 100%;
@@ -139,6 +155,7 @@
         position: absolute;
         top: -3rem;
         left: 50%;
+        z-index: 2; 
 
         display: flex;
         flex-direction: column;
@@ -185,6 +202,7 @@
             position: absolute;
             bottom: -6rem;
             left: 50%;
+            z-index: 2;
 
             transition: all .3s;
 
