--- a/src/client/scss/sections/_profile.scss
+++ b/src/client/scss/sections/_profile.scss
@@ -1,5 +1,6 @@
 .profile {
     background-image: linear-gradient(180deg, rgba(#9FBF73, 0.1) 0%, rgba(#81A84C, 0.1) 100%);
+    padding-bottom : 5rem;
 
     display: flex;
     justify-content: flex-end;
@@ -46,11 +47,10 @@
             }
         }
     }
-    &__photo {
+    &__photo-container {
         width: 50rem;
-        height: 110%;
-        object-fit: cover;
-
+        height: 110%;   
+        
         position: absolute;
         left: 15rem;
         bottom: -5%;
@@ -71,10 +71,12 @@
             bottom: 0;
         }
         @media screen and (max-width: $bp-profile-mobile) {
-            width: 100%;
+            width: 50rem;
             height: auto;
             padding: 10rem 7.5rem;
             padding-bottom: 0;
+            margin-left: auto;
+            margin-right: auto;
 
             position: relative;
             right: unset;
@@ -83,15 +85,25 @@
             bottom: -4rem;
          }
         @media only screen and (max-width: 500px) {
-            padding: 7.5rem 5rem;
+            width: 80%; 
+            padding: 0;
             padding-bottom: 0;
         }
         @media screen and (max-width: 450px) {
-            padding: 0;
+            width: 100%;
         }
         @media only screen and (max-width: 400px) {
-            margin: 5rem 3rem;
-        }
+           margin-bottom: 5rem;
+        }   
+    }
+    &__photo {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+
+        display: block;
+
+        
     }
     &__text {
         width: calc(100% - 65rem);
