--- a/src/client/scss/sections/_topics.scss
+++ b/src/client/scss/sections/_topics.scss
@@ -50,6 +50,8 @@
         bottom: -44%;
         z-index: -1;
 
+        animation: testAnimation 5s;
+
         @media only screen and (max-width: 1400px) {
             width: 45rem;
             height: 45rem;
