--- a/src/client/scss/sections/_organizations.scss
+++ b/src/client/scss/sections/_organizations.scss
@@ -66,7 +66,7 @@
     & .heading-3 {
         width: 30rem;
 
-        color: $color-white;
+        color: $color-black;
         text-align: center;
         line-height: 1.2;
        
@@ -80,6 +80,7 @@
             width: 40rem;
             height: 40rem;
             border-radius: 50%;
+            background-image: radial-gradient(white 56%, transparent 68%);
 
             display: block;
 
