--- a/App/Views/includes/cooperation.html
+++ b/App/Views/includes/cooperation.html
@@ -14,7 +14,7 @@
                 <use xlink:href="#resonance"></use>
             </svg>
         </div>
-        <div class="cooperation-way toBeAnimated animation-bounceUp delay--05">
+        <div class="cooperation-way toBeAnimated animation-bounceUp delay delay--05">
             <div class="cooperation-way__content">
                 <h4 class="heading-4 heading-4--bold">Dynamika skupiny</h4>
                 <p class="paragraph-1">
@@ -26,7 +26,7 @@
                 <use xlink:href="#dynamics"></use>
             </svg>
         </div>
-        <div class="cooperation-way toBeAnimated animation-bounceUp delay--10">
+        <div class="cooperation-way toBeAnimated animation-bounceUp delay delay--10">
             <div class="cooperation-way__content">
                 <h4 class="heading-4 heading-4--bold">Instituce a organizace</h4>
                 <p class="paragraph-1">
@@ -39,7 +39,7 @@
                 <use xlink:href="#institutions"></use>
             </svg>
         </div>
-        <div class="cooperation-way toBeAnimated animation-bounceUp delay--15">
+        <div class="cooperation-way toBeAnimated animation-bounceUp delay delay--15">
             <div class="cooperation-way__content">
                 <h4 class="heading-4 heading-4--bold">Individuální konzultace</h4>
                 <p class="paragraph-1">
