--- a/App/Views/includes/topics.html
+++ b/App/Views/includes/topics.html
@@ -21,5 +21,7 @@
     <svg class="topics__svgBottom" width="591" height="592" viewBox="0 0 591 592" fill="none" xmlns="http://www.w3.org/2000/svg">
         <use xlink:href="#decorationShape"></use> 
     </svg>
-    <img src="img/leafs.jpg" alt="rose" class="topics__img__mobile">
+    <div class="topics__img__container toBeAnimated animation-rollInFromRight">
+        <img src="img/leafs.jpg" alt="rose" class="topics__img__mobile">
+    </div>
 </section>
