--- a/src/client/scss/components/_cooperation-way.scss
+++ b/src/client/scss/components/_cooperation-way.scss
@@ -23,6 +23,11 @@
 
     flex-direction: column;
     align-items: center;
+
+    &.delay {
+      animation-delay: 0s;
+      transition-delay: 0s;
+    }
   }
   @media screen and (max-width: $bp-cooperation-mobile) {
     height: auto;
