--- a/src/client/scss/sections/_organizations.scss
+++ b/src/client/scss/sections/_organizations.scss
@@ -1,14 +1,20 @@
 .organizations {
     padding-bottom: 20rem;
-    margin-top: -8rem;
+    margin-top: -13rem;
     clip-path: url(#organizations-clip-path);
 
     position: relative;
+    overflow: hidden;
 
     @media screen and (max-width: $bp-organizations-mobile) {
        padding-bottom: 0;
+       clip-path: none;
     }
 
+    & .svg {
+        width: 0;
+        height: 0;
+    }
     &__svg {
         position: absolute;
         z-index: 50;
@@ -26,10 +32,10 @@
                 height: 45rem;
             }
             @media screen and (max-width: 500px) {
-                width: 40rem;
-                height: 40rem;
+                width: 35rem;
+                height: 35rem;
 
-                top: 25rem;
+                top: 18rem;
             }
             @media screen and (max-width: 400px) {
                 width: 30rem;
@@ -91,7 +97,7 @@
         }
 
         @media screen and (max-width: 500px) {
-            top: 25rem;
+            top: 18rem;
         }
     }
     & .heading-4 {
@@ -99,6 +105,10 @@
 
         position: relative;
         z-index: 2;
+
+        @media screen and (max-width: 800px) {
+            font-size: 1.6rem;
+        }
     }
     &__bg {
         height: 48rem;
@@ -145,6 +155,14 @@
 
         @media only screen and (max-width: 1100px) {
             margin-bottom: 3rem;
+        }
+        @media only screen and (max-width: 800px) {
+            margin-bottom: 5rem;
+
+            &.delay {
+                animation-delay: 0s;
+                transition-delay: 0s;
+            }
         }
         @media screen and (max-width: 500px) {
             height: 10rem;
