--- a/src/client/scss/sections/_passedEvents.scss
+++ b/src/client/scss/sections/_passedEvents.scss
@@ -18,9 +18,10 @@
 
         overflow: hidden;
         position: relative;
+        left: -35%;
     }
     &__image {
-        width: calc(100% - 70rem);
+        width: 100%;
         height: 100%;
         transform: scaleX(-1);
         object-fit: cover;
