--- a/src/client/scss/sections/_topics.scss
+++ b/src/client/scss/sections/_topics.scss
@@ -73,19 +73,37 @@
             width: 450px;
             flex-shrink: 0;
 
+            &:last-of-type {
+                display : none;
+            }
+
             @media only screen and (max-width: 1100px) {
                 width: 298px;
             }
             @media only screen and (max-width: 800px) {
-                display: none;
+                &:first-of-type {
+                    display : none;
+                }
+                &:last-of-type {
+                    width: 100%;
+                    height: 60vw;
+
+                    display : block;
+
+                    overflow: hidden;
+                }   
             }
+            @media only screen and (max-width: 500px) {
+                &:last-of-type {
+                    height: 80vw;
+                }
+            }
+            
         }
 
         &__regular {
             width: 100%;
             height: 100%;
-
-            object-fit: cover;
             
             @media only screen and (max-width: 800px) {
                 display: none;
@@ -95,11 +113,9 @@
             }
         }
         &__mobile {
-            height: 100vw;
-            transform: rotate(270deg);
-            transform-origin: center center;
+            width: 100%;
 
-            object-fit: cover;
+            transform: translateY(-25%);
 
             @media only screen and (min-width: 801px) {
                 display: none;
