--- a/src/client/scss/components/_cooperation-way.scss
+++ b/src/client/scss/components/_cooperation-way.scss
@@ -65,7 +65,7 @@
     width: 20rem;
     height: 20rem;
     margin-top: auto;
-    transition: all .5s;
+    transition: transform .5s;
 
     &--resonance {
       transform: scaleY(1.15);
