--- a/src/client/scss/sections/_profile.scss
+++ b/src/client/scss/sections/_profile.scss
@@ -71,11 +71,11 @@
     }
     &__photo-container {
         width: 50rem;
-        height: 110%;
+        height: 60rem;
         
         position: absolute;
         left: 15rem;
-        bottom: -5%;
+        bottom: 10%;
         z-index: 3;
 
         @media screen and (max-width: 1600px) {
@@ -88,9 +88,7 @@
         }
         @media screen and (max-width: 1000px) {
             width: 30rem;
-            height: 100%;
-
-            bottom: 0;
+            height: 60rem;
         }
         @media screen and (max-width: $bp-profile-mobile) {
             width: 35rem;
