Post scriptum HTML

--- a/App/Views/includes/header.html
+++ b/App/Views/includes/header.html
@@ -22,7 +22,7 @@
   </svg>
   <!-- /SVG -->
 
-  <img class="header__bg" src="img/group.jpg" alt="">
+  <img class="header__bg" src="img/hero.jpg" alt="">
   <div class="header__text">
     <h2 class="heading-2">Taťjana Horká</h2>
     <h1 class="heading-1">Vzájemně v pohybu</h1>
