--- a/public/css/style.css
+++ b/public/css/style.css
@@ -278,11 +278,17 @@ a:link {
     .cooperation-way {
       height: auto;
       margin-bottom: 10rem; } }
+  @media screen and (max-width: 500px) {
+    .cooperation-way {
+      width: 80%; } }
   .cooperation-way .heading-4 {
     margin-bottom: 1rem; }
     @media screen and (max-width: 800px) {
       .cooperation-way .heading-4 {
         text-align: center; } }
+    @media screen and (max-width: 500px) {
+      .cooperation-way .heading-4 {
+        text-align: left; } }
   .cooperation-way__text {
     font-size: 1.6rem; }
     @media only screen and (-ms-high-contrast: none), (-ms-high-contrast: active) {
@@ -735,6 +741,7 @@ a:link {
 
 .header {
   height: 100vh;
+  min-height: 80rem;
   margin-bottom: -15rem;
   position: relative; }
   @media screen and (max-width: 1000px) {
@@ -771,10 +778,11 @@ a:link {
       bottom: 20rem;
       right: 5rem; }
   .header__bg {
-    position: absolute;
-    object-fit: cover;
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    object-fit: cover;
+    object-position: center 108%;
+    position: absolute; }
   .header__text {
     position: absolute;
     z-index: 1;
@@ -915,9 +923,10 @@ a:link {
         display: none; } }
   .organizations .heading-3 {
     width: 30rem;
-    color: #000000;
+    color: #ffffff;
     text-align: center;
     line-height: 1.2;
+    font-weight: 300;
     position: absolute;
     top: 25rem;
     left: 50%;
@@ -927,7 +936,6 @@ a:link {
       width: 40rem;
       height: 40rem;
       border-radius: 50%;
-      background-image: radial-gradient(white 56%, transparent 68%);
       display: block;
       position: absolute;
       top: 50%;
@@ -1060,7 +1068,7 @@ a:link {
     @media only screen and (max-width: 1100px) {
       .passedEvents__content {
         height: 100%;
-        right: -3rem; } }
+        right: -4rem; } }
     @media only screen and (max-width: 900px) {
       .passedEvents__content {
         width: 100%;
