--- a/src/client/scss/sections/_header.scss
+++ b/src/client/scss/sections/_header.scss
@@ -1,5 +1,6 @@
 .header {
   height: 100vh;
+  min-height: 80rem;
   margin-bottom: -15rem;
 
   position: relative;
@@ -49,10 +50,14 @@
   }
 
   &__bg {
-    position: absolute;
-    object-fit: cover;
     width: 100%;
     height: 100%;
+    
+    object-fit: cover;
+    object-position: center 108%;
+
+    position: absolute;
+
   }
 
   &__text {
