--- a/src/client/scss/sections/_passedEvents.scss
+++ b/src/client/scss/sections/_passedEvents.scss
@@ -42,12 +42,12 @@
 
         position: absolute;
         top: 50%;
-        right: -2rem; // Who knows why there is white space
+        right: -2rem; // Who knows why there is a white space
         z-index: 2;
 
         @media only screen and (max-width: 1100px) {
             height: 100%;
-            right: -3rem;
+            right: -4rem;
         }
         @media only screen and (max-width: 900px) {
             width: 100%;
