--- a/App/Views/includes/organizations.html
+++ b/App/Views/includes/organizations.html
@@ -1,9 +1,7 @@
 <section class="organizations">
     <div class="organizations__bg">
-        <svg class="svg">
-            <clipPath id="organizations-clip-path" clipPathUnits="objectBoundingBox">
-                <path d="M0,0.08 L0.226,0.012 C0.226,0.012,0.356,0.045,0.478,0.012 C0.601,-0.021,0.618,0.027,0.737,0.012 C0.856,-0.003,1,0.012,1,0.012 V1 H0.457 H0 V0.669 V0.08"></path>
-            </clipPath>
+        <svg class="svg" width="1920" height="539" viewBox="0 0 1920 539" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M0 11.8589C0 11.8589 158 4.43198 433.856 4.4324C709.711 4.43282 684.632 16.7845 919.864 4.43243C1155.1 -7.91961 1189.21 10.0714 1417.42 4.43237C1645.63 -1.20665 1923 4.43237 1923 4.43237V539H879.516H0V247.703V11.8589Z" fill="#9FBF73"/>
         </svg>
     </div>
     <svg
