--- a/App/Views/includes/footer.html
+++ b/App/Views/includes/footer.html
@@ -14,10 +14,10 @@
                     <p class="paragraph-1 paragraph-1__break">Skupinová práce hodina / 5&nbsp;000&nbsp;Kč</p>
                     <p class="paragraph-1">Cestovní náhrady jsou stanoveny podle počtu kilometrů</p>
                 </div>
-                <div class="footer__columns__column footer__columns__help">
+                <!--<div class="footer__columns__column footer__columns__help">
                     <h5 class="heading-5 footer__columns__help__head">S tvorbou webu pomohl</h5>
-                    <!-- <img src="img/group.jpg" alt="Amnion Web" class="footer__columns__help__photo"> -->
+                    <img src="img/group.jpg" alt="Amnion Web" class="footer__columns__help__photo">
                     <p class="footer__columns__help__text">AmnioN Web</p>
-                </div>
+                </div>-->
             </div>   
         </footer>
