--- a/src/client/scss/sections/_postScriptum.scss
+++ b/src/client/scss/sections/_postScriptum.scss
@@ -33,5 +33,32 @@
         @media only screen and (max-width: 950px) {
             font-size: $font-big;
         }
+        @media only screen and (max-width: 800px) {
+            width: 100%;
+
+            padding: 8rem 4rem 4rem 4rem;
+
+            top: 65%;
+            right: 0;
+            bottom: 0;
+        }
+        @media only screen and (max-width: 600px) {
+            padding: 6rem 4rem 4rem 4rem;
+        }
+        @media only screen and (max-width: 600px) {
+            padding: 4rem 4rem 4rem 4rem;
+        }
+        @media only screen and (max-width: 450px) {
+            padding: 3rem 4rem 4rem 4rem;
+        }
+        @media only screen and (max-width: 400px) {
+            padding: 2rem 4rem 4rem 4rem;
+        }
+        @media only screen and (max-width: 360px) {
+            padding: 1rem 3rem 0rem 3rem;
+        }
+        @media only screen and (max-width: 330px) {
+            padding: 0.5rem 2rem 0rem 2rem;
+        }
     }
 }
