--- a/App/Views/index.html
+++ b/App/Views/index.html
@@ -20,6 +20,9 @@
     
     <!-- PASSED EVENTS -->
     {{ include('includes/passedEvents.html') }}
+
+    <!-- BOOK -->
+    {{ include('includes/book.html') }}
     
     <!-- COOPERATION -->
     {{ include('includes/cooperation.html') }}
