--- a/src/client/scss/sections/_events.scss
+++ b/src/client/scss/sections/_events.scss
@@ -1,100 +1,127 @@
 .events {
     width: 100vw;
-    height: auto;
-    padding-top: 12rem;
-    background-image: url('../img/eventsBackground.svg');
-    background-size: cover;
-    overflow: hidden;
+    height: 50vh;
+    margin-top: -35vh;
+    background-color: transparent;
+    padding-bottom: 5rem;
+    padding-left: 10rem;
+    padding-right: 10rem;  
 
     position: relative;
     z-index: 2;
 
-   /*  @media only screen and (max-width: 800px) {
-        background-image: linear-gradient(to right bottom, white, #f4f8ef);
-    } */
+    @media only screen and (max-width: 1600px) {
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
+    @media only screen and (max-width: 1200px) {
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+    @media screen and (max-width: $bp-events-mobile) {
+        height: auto;
+        margin-top: 3rem;
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+    @media only screen and (max-width: 500px) {
+        margin-top: 1.5rem;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
 
     &__container {
         height: 100%;
         width: 100%;
-        padding: 20rem 15rem;
 
         display: flex;
-        align-items: center;
+        align-items: flex-end;
         justify-content: center;
     
         position: relative;
         z-index: 2;
     
-        @media only screen and (max-width: 1000px) {
+        @media only screen and (max-width: $bp-events-mobile) {
             align-content: center;
             flex-wrap: wrap;
         }
     }
     &__event {
-        width: 35rem;
-        height: 25rem;
-        margin: 6rem 0;
-        filter: drop-shadow(0 2px 4px $color-black-overlay-light);
-        transform: translateY(-25%);
+        border-radius: 1rem;
+        background-color: $color-green-lighter;
+        padding: 3rem;
+        box-shadow: 0 3px 3px rgba($color-black, .35);
+        width: 100%;
 
         position: relative;
 
-        flex-shrink: 0;
-
         @media only screen and (max-width: 1600px) {
-            width: 32rem;
+            padding: 2.5rem;
         }
-        @media only screen and (max-width: 1300px) {
-            width: 27rem;
+        @media only screen and (max-width: 1200px) {
+            padding: 2rem;
         }
-
-        & svg {
+        @media only screen and (max-width: $bp-events-mobile) {
             width: 100%;
-            height: 150%;
-            fill: $color-white;
         }
 
-        &__image {
-            width: 75%;
-            height: 15rem;
-            border-radius: 5px;
-            transform: translate(-50%, -50%);
-
-            object-fit: cover;
-            object-position: center center;
-
-            position: absolute;
-            top: 6rem;
-            left: 52%;
-        }
-        & .heading-4 {
-            width: calc(100% - 8rem);
-            
-            position: absolute;
-            top: 16rem;
-            left: 5rem;
-            
-            @media only screen and (max-width: 1300px) {
-                width: calc(100% - 6rem);
-                
-                font-size: 1.6rem;
-                
-                left: 4rem;
+        &.delay {
+            @media screen and (max-width: $bp-events-mobile) {
+                animation-delay: 0s;
+                transition-delay: 0s;
             }
         }
-        & .paragraph-small {
-            width: calc(100% - 8rem);
+        &:not(:last-child) {
+            margin-right: 5rem;
+
+            @media only screen and (max-width: $bp-events-mobile) {
+                margin-right: 0;
+                margin-bottom: 5rem;
+            }
+            @media only screen and (max-width: 700px) {
+                margin-right: 0;
+                margin-bottom: 3rem;
+            }
+            @media only screen and (max-width: 500px) {
+                margin-right: 0;
+                margin-bottom: 1.5rem;
+            }
+        }
+
+        & .heading-4 {
+            margin-bottom: 2rem;
+
+            @media only screen and (max-width: $bp-events-mobile) {
+                margin-bottom: 1rem;
+            }
+        }
+        &__description {
+            margin-bottom: 2rem;
+
+            @media only screen and (max-width: $bp-events-mobile) {
+                margin-bottom: 1rem;
+            }
+        }
+        &__link {
+            color: $color-green !important;
+
             position: absolute;
-            top: 26rem;
-            left: 5rem;
-            
-            @media only screen and (max-width: 1300px) {
-                width: calc(100% - 6rem);
+            right: 5rem;
+            bottom: 5rem;   
 
-                top: 24rem;
-                left: 4rem;
+            transition: all .2s;
 
-                font-size: 1.6rem;
+            @media only screen and (max-width: 1600px) {
+                right: 3rem;
+                bottom: 3rem;
+            }
+            @media only screen and (max-width: 1200px) {
+                right: 2rem;
+                bottom: 2rem;
+            }
+
+            &:hover {
+                transform: translateY(2px);
             }
         }
     }
