--- a/src/client/scss/sections/_header.scss
+++ b/src/client/scss/sections/_header.scss
@@ -1,132 +1,73 @@
 .header {
-  height: 100vh;
-  min-height: 80rem;
-  margin-bottom: -15rem;
+  height: 80vh;
+  min-height: 70rem;
 
   position: relative;
+  overflow: hidden;
 
-  @media screen and (max-width: 1000px) {
-    margin-bottom: -12rem;
-   }
-  @media screen and (max-width: $bp-header-mobile) {
-   margin-bottom: -5rem;
-  }
-
-  &__svg {
-    position: absolute;
-
-    &--bottom {
-      fill: $color-green;
-      height: 30rem;
-      width: 100%;
-
-      bottom: 0;
-      left: 0;
-      z-index: 1;
-
-      @media screen and (max-width: 900px) {
-        height: 28rem;
-      }
-      @media screen and (max-width: $bp-header-mobile) {
-        height: 20rem;
-        width: 200%;
-
-        left: -100%;
-      }
-      @media screen and (max-width: 400px) {
-        height: 15rem;
-        width: 300%;
-
-        left: -170%;
-      }
-    }
-    &--flower {
-      width: 15rem;
-      height: 15rem;
-
-      bottom: 20rem;
-      right: 5rem;
-    }
+  @media screen and (max-width: 700px) {  
+   min-height: 50rem;
   }
 
   &__bg {
     width: 100%;
     height: 100%;
-    
+
     object-fit: cover;
-    object-position: center 108%;
+    object-position: center 70%;
 
     position: absolute;
 
+    @media screen and (max-width: 1750px) {  
+      transform: scale(1.05) translateY(-5rem);    
+    }
+    @media screen and (max-width: 1500px) {  
+      transform: scale(1.1) translateY(-10rem);    
+    }
+    @media screen and (max-width: 1300px) {  
+      transform: scale(1.3) translateY(-10rem);    
+    }
+    @media screen and (max-width: 1000px) {  
+      transform: scale(1.3) translateY(-5rem);
+    }
+    @media screen and (max-width: 500px) {  
+      transform: scale(1.2) translateY(-5rem);
+    }
   }
 
   &__text {
     position: absolute;
     z-index: 1;
-    bottom: 13rem;
-    right: 10rem;
+    top: 5rem;
+    left: 5rem;
 
-    @media screen and (max-width: 1500px) {
-      right: 5rem;
-    }
-    @media screen and (max-width: 1300px) {
-      bottom: 15rem;
-      right: 3rem;
-    }
-    @media screen and (max-width: 900px) {
-      bottom: 15rem;
-      right: 1rem;
-    }
+    display: flex;
+    flex-direction: column-reverse;
+
     @media screen and (max-width: $bp-header-mobile) {
       width: 100%;
-      height: 100%;
+      background-color: rgba($color-white, .5);
+      margin-top: auto;
+      padding-top: 5rem;
+      padding-bottom: 5rem;
 
+      left: unset;
+      top: unset;
       bottom: 0;
-      right: 0;
+    }
+    @media screen and (max-width: 700px) {
+      padding-top: 3rem;
+      padding-bottom: 3rem;
     }
   }
   & .heading-2 {
-    @media screen and (max-width: 1300px) {
-      font-size: 3rem;
-    }
-    @media screen and (max-width: 1200px) {
-      font-size: 3rem;
-    }
-    @media screen and (max-width: 900px) {
-      font-size: 2.5rem;
-    }
+    text-align: left;
+
     @media screen and (max-width: $bp-header-mobile) {
-      width: 100%;
-
-      font-size: 4rem;
-      text-align: center;
-
-      position: absolute;
-      top: 2rem;
+     text-align: center;
     }
   }
   & .heading-1 {
-    @media screen and (max-width: 1300px) {
-      font-size: 6rem;
-    }
-    @media screen and (max-width: 1200px) {
-      font-size: 5rem;
-    }
-    @media screen and (max-width: 900px) {
-      font-size: 4.5rem;
-    }
-    @media screen and (max-width: $bp-header-mobile) {
-      font-size: 3.5rem;
-
-      position: absolute;
-      bottom: 10rem;
-      right: 4rem;
-    }
-    @media screen and (max-width: 400px) {
-      font-size: 3rem;
-
-      bottom: 7rem;
-      right: 2rem;
-    }
-  }
+    text-align: center;
+  } 
 }
